# library-codegen-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
config/: settings.py
examples/: advanced_usage.py  basic_usage.py
src/: __init__.py  cli.py
src/agent/: graph.py  nodes.py  state.py
src/context/: __init__.py  chunker.py  database.py  embeddings.py  manager.py
src/llm/: __init__.py  azure_client.py
src/tools/: base.py  code_example_extractor.py  documentation_crawler.py  github_analyzer.py  mcp_server.py
src/utils/: __init__.py  helpers.py  logger.py
tests/: test_agent.py  test_context.py  test_tools.py
